infrastructure/prod/stays-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stays-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stays
  template:
    metadata:
      labels:
        app: stays
    spec:
      containers:
        - name: stays
          image: kokiebisu/nextbnb-stays
---
apiVersion: v1
kind: Service
metadata:
  name: stays-service
spec:
  selector:
    app: stays
  ports:
    - name: stays
      protocol: TCP
      port: 3000
      targetPort: 3000
