infrastructure/prod/ingress-prod.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: nextbnb.ca
      http:
        paths:
          - path: /api/stays/?(.*)
            backend:
              serviceName: stays-service
              servicePort: 3000
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-service
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: client-service
              servicePort: 3000
